[tool.poetry]
name = "streamlit-auth-test"
version = "0.1.0"
description = ""
authors = ["rasnes <rasmusnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.10.0"
httpx-oauth = "^0.7.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
